tests/errors/subroutine6.f90
subroutine sub (array)
    dimension array(3)
end subroutine